fixed commit warnings